<resources>
    <string name="app_name">Journal App</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="add_entry_description">How are you feeling ?</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="welcome_text">Welcome to the Journal App</string>
</resources>
